@@ -20,6 +20,7 @@ Suite *make_master_suite(void);
 Suite *make_list_suite(void);
 Suite *make_msg_suite(void);
 Suite *make_log_suite(void);
+Suite *make_log_internal_suite(void);
 Suite *make_limit_suite(void);
 Suite *make_fork_suite(void);
 Suite *make_fixture_suite(void);
